NextGEN Gallery
by Alex Rabe & NextGEN DEV Team

V0.44 -
- NEW : Select multiple files for upload (THX to Diego A., http://www.fyneworks.com)
- Added : Option for CDATA wrapper (not working propper)
- Added : Option for Thickbox Loading Image
- Added : CSS file for dKret2
- Changed : All jQuery scripts are now in "No Conflict" mode
- Changed : Script loading now via wp_enqueue_script
- Changed : Add constant values for folder/file permission
- Changed : Use description in <A href title>
- Bugfix : Remove wrong DIV tag in slideshow
- Bugfix : Tag [Slideshow=id,width,height] didn't work proper
- Bugfix : Name conflict in Album script (serialize) (THX to Die-Andis)
- Bugfix : Changed check for CSS activation
- Bugfix : Changed check for safe-mode (Don't ask)

V0.43 - 20.05.2007
- Changed : Rename Thumbnail class to avoid php name collision
- Bugfix : Missing translation flag in setup
- Bugfix : Changed check for safe-mode
- Bugfix : Changed check for Zip-File

V0.42 - 17.05.2007
- Bugfix : Float function for singlepic not integrated, sorry !
- Bugfix : Remove clear:both in widget

V0.41 - 17.05.2007
- NEW : Sidebar widget from KeViN
- Update : Better album management for more galleries
- Update : Thickbox v3 integrated
- Added : Float selection for singlepic
- Added : CSS class for widget
- Added : CSS file for K2 theme
- Added : German translation (THX to Lazy)
- Added : Better check for safe-mode
- Added : CSS Class for single-pic : class="ngg-singlepic"
- Added : Option to resize image before cropping it (Setting reset of 
          prior versions needed! Setup -> Reset Settings)
- Changed : Image quality by default 85% (THX to ArizonaGroovejet)
- Bugfix : Update wrong file when select other style
- Bugfix : Fixed Permalink in album (THX to Helene D.)
- Bugfix : Scan folder in empty gallery
- Bugfix : Swfobjects only added with Thickbox effect
- Bugfix : Umlauts are now handled correctly

V0.40 - 29.04.2007
- NEW : TinyMCE Button integration